my second update

--- a/force-app/main/default/classes/SMC_myCartController_Test.cls
+++ b/force-app/main/default/classes/SMC_myCartController_Test.cls
@@ -1,5 +1,7 @@
+@isTest
 public with sharing class SMC_myCartController_Test {
-    public SMC_myCartController_Test() {
 
+    @isTest static void test_1 ( ) {
+        
     }
 }
